[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/Resizable.gd" type="Script" id=1]
[ext_resource path="res://gui/textures/button_reset.png" type="Texture" id=2]
[ext_resource path="res://parameter_nodes/parameter_scripts/ParameterFloat.gd" type="Script" id=3]
[ext_resource path="res://parameter_nodes/extensions/Ext_Slider.gd" type="Script" id=4]

[node name="ParameterSlider" type="HBoxContainer"]
anchor_left = -0.000122013
anchor_right = 0.999878
margin_bottom = 39.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
label_text = "Slider Label"

[node name="Spacer1" type="Control" parent="."]
margin_bottom = 39.0

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_right = 134.0
margin_bottom = 39.0
size_flags_vertical = 5
text = "Slider Label"
valign = 1

[node name="ValueLabel" type="Label" parent="."]
margin_left = 142.0
margin_right = 206.0
margin_bottom = 39.0
size_flags_vertical = 5
text = ":0.000"
valign = 1

[node name="Slider" type="HSlider" parent="."]
margin_left = 214.0
margin_right = 1228.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 5
step = 1e-06
script = ExtResource( 4 )

[node name="ButtonReset" type="Button" parent="."]
margin_left = 1236.0
margin_right = 1272.0
margin_bottom = 39.0
rect_min_size = Vector2( 36, 0 )
disabled = true
icon = ExtResource( 2 )
flat = true
expand_icon = true
script = ExtResource( 1 )
resize_height = false

[node name="Spacer2" type="Control" parent="."]
margin_left = 1280.0
margin_right = 1280.0
margin_bottom = 39.0

[connection signal="gui_input" from="Slider" to="Slider" method="_on_Slider_gui_input"]
[connection signal="value_changed" from="Slider" to="Slider" method="_on_Slider_value_changed"]
[connection signal="value_changed" from="Slider" to="." method="_on_Slider_value_changed"]
[connection signal="value_committed" from="Slider" to="." method="_on_Slider_value_committed"]
[connection signal="pressed" from="ButtonReset" to="." method="_on_ButtonReset_pressed"]
